5th - Updated links and images

--- a/brazaletes_1.html
+++ b/brazaletes_1.html
@@ -254,6 +254,21 @@
                     alt=""
                   />
                 </div>
+
+                <div class="carousel-item">
+                  <video
+                    autoplay="autoplay"
+                    muted
+                    loop
+                    width="400"
+                    height="482"
+                  >
+                    <source
+                      src="videos/Brazalete_Marino_04.mp4"
+                      type="video/mp4"
+                    />
+                  </video>
+                </div>
               </div>
 
               <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_3 -->
@@ -524,6 +539,9 @@
             </li>
             <li class="page-item">
               <a class="page-link" href="brazaletes_3.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="brazaletes_4.html">4</a>
             </li>
             <li class="page-item">
               <a class="page-link" href="brazaletes_2.html" aria-label="Next"
