--- a/brazaletes_2.html
+++ b/brazaletes_2.html
@@ -368,7 +368,7 @@
                 <div class="carousel-item active">
                   <img
                     class="card-img-top d-block w-100"
-                    src="images/brazaletes/Brazalete_Cristal_Negro_01.png"
+                    src="images/brazaletes/Brazalete_Trebol_01.png"
                     alt=""
                   />
                 </div>
@@ -376,17 +376,24 @@
                 <div class="carousel-item">
                   <img
                     class="card-img-top d-block w-100"
-                    src="images/brazaletes/Brazalete_Cristal_Negro_02.png"
+                    src="images/brazaletes/Brazalete_Trebol_02.png"
                     alt=""
                   />
                 </div>
 
                 <div class="carousel-item">
-                  <img
-                    class="card-img-top d-block w-100"
-                    src="images/brazaletes/Brazalete_Cristal_Negro_03.png"
-                    alt=""
-                  />
+                  <video
+                    autoplay="autoplay"
+                    muted
+                    loop
+                    width="400"
+                    height="482"
+                  >
+                    <source
+                      src="videos/Brazalete_Trebol_03.mp4"
+                      type="video/mp4"
+                    />
+                  </video>
                 </div>
               </div>
 
@@ -520,6 +527,9 @@
             </li>
             <li class="page-item">
               <a class="page-link" href="brazaletes_3.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="brazaletes_4.html">4</a>
             </li>
             <li class="page-item">
               <a class="page-link" href="brazaletes_3.html" aria-label="Next"
