--- a/brazaletes_3.html
+++ b/brazaletes_3.html
@@ -546,7 +546,10 @@
               <a class="page-link" href="brazaletes_3.html">3</a>
             </li>
             <li class="page-item">
-              <a class="page-link" href="brazaletes_3.html" aria-label="Next"
+              <a class="page-link" href="brazaletes_4.html">4</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="brazaletes_4.html" aria-label="Next"
                 ><span aria-hidden="true">&raquo;</span></a
               >
             </li>
