7th - updated video size

--- a/quien_soy.html
+++ b/quien_soy.html
@@ -1,117 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>Victoria Quinn</title>
-    <!-- CSS STYLES -->
-    <link rel="stylesheet" href="css/styles.css" />
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Cormorant+Garamond:wght@300&family=Raleway:wght@600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <!-- MENÚ DE NAVEGACIÓN -->
-    <section>
-      <div class="container">
-        <!-- NAVIGATION BAR -->
-        <nav class="navbar navbar-expand-md navbar-light bg-warning fixed-top">
-          <!-- BRAND -->
-          <a class="navbar-brand" href="index.html">
-            <h1>Victoria Quinn</h1>
-          </a>
-          <!-- BUTTON TOGGLER -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggler"
-            aria-controls="navbarToggler"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>Victoria Quinn</title>
+  <!-- CSS STYLES -->
+  <link rel="stylesheet" href="css/styles.css" />
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Cormorant+Garamond:wght@300&family=Raleway:wght@600;700&display=swap" rel="stylesheet" />
+</head>
 
-          <!-- ADD A DIV COLLAPSE-->
-          <div class="collapse navbar-collapse" id="navbarToggler">
-            <!-- ENLACES -->
-            <ul class="navbar-nav ms-auto">
-              <li class="navbar-item">
-                <a class="nav-link disabled" href="#">Anillos</a>
-              </li>
-              <li class="navbar-item">
-                <a class="nav-link disabled" href="#">Aretes</a>
-              </li>
-              <li class="navbar-item">
-                <a class="nav-link" href="brazaletes_1.html">Brazaletes</a>
-              </li>
-              <li class="navbar-item">
-                <a class="nav-link disabled" href="#">Collares</a>
-              </li>
-              <li class="navbar-item">
-                <a class="nav-link disabled" href="#">Juegos</a>
-              </li>
-              <li class="navbar-item">
-                <a class="nav-link" href="quien_soy.html">¿Quién soy?</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </section>
+<body>
+  <!-- MENÚ DE NAVEGACIÓN -->
+  <section>
+    <div class="container">
+      <!-- NAVIGATION BAR -->
+      <nav class="navbar navbar-expand-md navbar-light bg-warning fixed-top">
+        <!-- BRAND -->
+        <a class="navbar-brand" href="index.html">
+          <h1>Victoria Quinn</h1>
+        </a>
+        <!-- BUTTON TOGGLER -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- FRASE  -->
-    <section class="quien_Soy d-flex align-items-center">
-      <div class="container">
-        <em>
-          <p>
-            ¡Hola! Soy Janett. Soy una artesana a la que le fascina crear y
-            diseñar accesorios únicos con piezas de piedras naturales,
-            sintéticas, vidrio, cristales Swarovski, entre otros materiales, que
-            realcen nuestra belleza.
-          </p>
+        <!-- ADD A DIV COLLAPSE-->
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <!-- ENLACES -->
+          <ul class="navbar-nav ms-auto">
+            <li class="navbar-item">
+              <a class="nav-link disabled" href="#">Anillos</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link disabled" href="#">Aretes</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="brazaletes_1.html">Brazaletes</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link disabled" href="#">Collares</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link disabled" href="#">Juegos</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="quien_soy.html">¿Quién soy?</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </section>
 
-          <p>
-            La bisutería artesanal se ha convertido en mi gran pasión. Cada una
-            de mis piezas las elaboro con gran cariño y esmero con el afán de
-            hacerte lucir más bella, única y sofisticada.
-          </p>
+  <!-- FRASE  -->
+  <section class="quien_soy d-flex align-items-center">
+    <div class="container">
+      <em>
+        <p>
+          ¡Hola! Soy Janett. Soy una artesana a la que le fascina crear y
+          diseñar accesorios únicos con piezas de piedras naturales,
+          sintéticas, vidrio, cristales Swarovski, entre otros materiales, que
+          realcen nuestra belleza.
+        </p>
 
-          <p>
-            En Victoria Quinn encontrarás no sólo accesorios, sino también
-            cosméticos y ropa típica oaxaqueña.
-          </p>
-        </em>
-      </div>
-    </section>
+        <p>
+          La bisutería artesanal se ha convertido en mi gran pasión. Cada una
+          de mis piezas las elaboro con gran cariño y esmero con el afán de
+          hacerte lucir más bella, única y sofisticada.
+        </p>
 
-    <footer class="bg-light text-center text-lg-start">
-      <!-- Copyright -->
-      <div class="text-center p-3 bg-warning text-gold">
-        Diseños y creaciones: Janett Morales V.
-      </div>
-      <!-- Copyright -->
-    </footer>
+        <p>
+          En Victoria Quinn encontrarás no sólo accesorios, sino también
+          cosméticos y ropa típica oaxaqueña.
+        </p>
+      </em>
+    </div>
+  </section>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3 bg-warning text-gold">
+      Diseños y creaciones: Janett Morales V.
+    </div>
+    <!-- Copyright -->
+  </footer>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
+
 </html>
